vault/config/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
  namespace: vault-server
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: vault-server
    weight: 100
  wildcardPolicy: None
